@@ -36,6 +36,13 @@ NS_LOG_COMPONENT_DEFINE ("FlowMonitor");
 NS_OBJECT_ENSURE_REGISTERED (FlowMonitor);
 
 
+inline static void
+Indent (std::ostream &os, uint16_t level)
+{
+  for (uint16_t __xpto = 0; __xpto < level; __xpto++) os << ' ';
+}
+
+
 TypeId 
 FlowMonitor::GetTypeId (void)
 {
@@ -401,19 +408,19 @@ FlowMonitor::AddFlowClassifier (Ptr<FlowClassifier> classifier)
 }
 
 void
-FlowMonitor::SerializeToXmlStream (std::ostream &os, int indent, bool enableHistograms, bool enableProbes)
+FlowMonitor::SerializeToXmlStream (std::ostream &os, uint16_t indent, bool enableHistograms, bool enableProbes)
 {
   CheckForLostPackets ();
 
-  INDENT (indent); os << "<FlowMonitor>\n";
+  Indent (os, indent); os << "<FlowMonitor>\n";
   indent += 2;
-  INDENT (indent); os << "<FlowStats>\n";
+  Indent (os, indent); os << "<FlowStats>\n";
   indent += 2;
   for (FlowStatsContainerCI flowI = m_flowStats.begin ();
        flowI != m_flowStats.end (); flowI++)
     {
 
-      INDENT (indent);
+      Indent (os, indent);
 #define ATTRIB(name) << " " # name "=\"" << flowI->second.name << "\""
       os << "<Flow flowId=\"" << flowI->first << "\""
       ATTRIB (timeFirstTxPacket)
@@ -436,14 +443,14 @@ FlowMonitor::SerializeToXmlStream (std::ostream &os, int indent, bool enableHist
       indent += 2;
       for (uint32_t reasonCode = 0; reasonCode < flowI->second.packetsDropped.size (); reasonCode++)
         {
-          INDENT (indent);
+          Indent (os, indent);
           os << "<packetsDropped reasonCode=\"" << reasonCode << "\""
           << " number=\"" << flowI->second.packetsDropped[reasonCode]
           << "\" />\n";
         }
       for (uint32_t reasonCode = 0; reasonCode < flowI->second.bytesDropped.size (); reasonCode++)
         {
-          INDENT (indent);
+          Indent (os, indent);
           os << "<bytesDropped reasonCode=\"" << reasonCode << "\""
           << " bytes=\"" << flowI->second.bytesDropped[reasonCode]
           << "\" />\n";
@@ -457,10 +464,10 @@ FlowMonitor::SerializeToXmlStream (std::ostream &os, int indent, bool enableHist
         }
       indent -= 2;
 
-      INDENT (indent); os << "</Flow>\n";
+      Indent (os, indent); os << "</Flow>\n";
     }
   indent -= 2;
-  INDENT (indent); os << "</FlowStats>\n";
+  Indent (os, indent); os << "</FlowStats>\n";
 
   for (std::list<Ptr<FlowClassifier> >::iterator iter = m_classifiers.begin ();
       iter != m_classifiers.end ();
@@ -471,23 +478,23 @@ FlowMonitor::SerializeToXmlStream (std::ostream &os, int indent, bool enableHist
 
   if (enableProbes)
     {
-      INDENT (indent); os << "<FlowProbes>\n";
+      Indent (os, indent); os << "<FlowProbes>\n";
       indent += 2;
       for (uint32_t i = 0; i < m_flowProbes.size (); i++)
         {
           m_flowProbes[i]->SerializeToXmlStream (os, indent, i);
         }
       indent -= 2;
-      INDENT (indent); os << "</FlowProbes>\n";
+      Indent (os, indent); os << "</FlowProbes>\n";
     }
 
   indent -= 2;
-  INDENT (indent); os << "</FlowMonitor>\n";
+  Indent (os, indent); os << "</FlowMonitor>\n";
 }
 
 
 std::string
-FlowMonitor::SerializeToXmlString (int indent, bool enableHistograms, bool enableProbes)
+FlowMonitor::SerializeToXmlString (uint16_t indent, bool enableHistograms, bool enableProbes)
 {
   std::ostringstream os;
   SerializeToXmlStream (os, indent, enableHistograms, enableProbes);
