@@ -187,17 +187,15 @@ Ipv6FlowClassifier::FindFlow (FlowId flowId) const
 }
 
 void
-Ipv6FlowClassifier::SerializeToXmlStream (std::ostream &os, int indent) const
+Ipv6FlowClassifier::SerializeToXmlStream (std::ostream &os, uint16_t indent) const
 {
-#define INDENT(level) for (int __xpto = 0; __xpto < level; __xpto++) os << ' ';
-
-  INDENT (indent); os << "<Ipv6FlowClassifier>\n";
+  Indent (os, indent); os << "<Ipv6FlowClassifier>\n";
 
   indent += 2;
   for (std::map<FiveTuple, FlowId>::const_iterator
        iter = m_flowMap.begin (); iter != m_flowMap.end (); iter++)
     {
-      INDENT (indent);
+      Indent (os, indent);
       os << "<Flow flowId=\"" << iter->second << "\""
          << " sourceAddress=\"" << iter->first.sourceAddress << "\""
          << " destinationAddress=\"" << iter->first.destinationAddress << "\""
@@ -208,9 +206,8 @@ Ipv6FlowClassifier::SerializeToXmlStream (std::ostream &os, int indent) const
     }
 
   indent -= 2;
-  INDENT (indent); os << "</Ipv6FlowClassifier>\n";
+  Indent (os, indent); os << "</Ipv6FlowClassifier>\n";
 
-#undef INDENT
 }
 
 
